# AUJobsScraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  debug_gc_after_click.html  debug_gc_initial.html  docker-compose.yml  pyproject.toml  test_debug.py  test_negative_only.py
aujobsscraper/: __init__.py  config.py
aujobsscraper/models/: __init__.py  fingerprint.py  job.py  location.py
aujobsscraper/scrapers/: __init__.py  base_scraper.py  gradconnection_scraper.py  indeed_scraper.py  indeedscraper.py  prosple_scraper.py  (+1 more)
docs/: salary_extraction.md
jobly/: __init__.py  config.py  models.py
results/: jobs.json
scripts/: analyze_html.py  analyze_locations_html.py  compare_html.py  debug_cleaning.py  debug_gradconnection_locations.py  debug_json_extraction.py  debug_json_structure.py  debug_prosple_links.py  debug_prosple_salary_extraction.py  fetch_prosple_links.py  find_locations_in_json.py  indeed.ipynb  indeed.py  job_role_counts.csv  job_title_counts.csv  jobs.csv  migrate_data.py  reproduce_issue.py  run_all_scrapers.py  run_all_scrapers_first_iteration.py  run_processor.py  run_scraper.py  scheduler.py  soft_skills_counts.csv  softeng_roles.csv  technical_skills_counts.csv  temp_run_gradconnection_one_job.py  temp_run_indeed_jobs.py  temp_run_prosple_one_job.py  temp_seek_test.py  test.ipynb  test_aiml_classification.py  test_embedding_experiment.py  test_gradconnection_job_details.py  test_gradconnection_links.py  test_gradconnection_notify.py  test_gradconnection_updates.py  test_graduate_program_classification.py  tools_and_technologies_counts.csv  update_seek_titles.py  (+2 more)
tests/: conftest.py  test_base_database.py  test_duplicate_handling.py  test_job_role_extraction.py  test_prosple_scraper.py  test_refactored_database.py  test_run_scraper.py  test_scraper_utils.py  test_seek_scraper.py  test_update_seek_titles.py
(+40 files in other folders)
