[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobly"
version = "0.1.0"
description = "Australian job market scraper and analyzer"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ryan Kuang" }
]
dependencies = [
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "langchain-openai>=0.0.1",
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "schedule>=1.2.0",
    "spacy>=3.6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jobly*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)
