[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aujobsscraper"
version = "0.1.0"
description = "Australian job board scrapers — returns JobPosting objects"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aujobsscraper*"]
